prevent window overflow

--- a/src/styles/interface/gameInterface.css
+++ b/src/styles/interface/gameInterface.css
@@ -3,4 +3,5 @@
     width: 100vw;
     height: 100vh;
     background-color: whitesmoke;
+    overflow: hidden;
 }
